  ``const char *`` as the string is stored beyond the call.

- Issue #2422: When compiled with the ``--with-valgrind`` option, the
  pymalloc allocator will be automatically disabled when running under
  Valgrind.  This gives improved memory leak detection when running
  under Valgrind, while taking advantage of pymalloc at other times.

Library
-------

- In pdb, allow giving a line number to the "until" command.

- Issue #1437051: For pdb, allow "continue" and related commands in
  .pdbrc files.  Also, add a command-line option "-c" that runs a
  command as if given in .pdbrc.

- Issue #4179: In pdb, allow "list ." as a command to return to the
  currently debugged line.

- Issue #4108: In urllib.robotparser, if there are multiple 'User-agent: *'
  entries, consider the first one.

- Issue #6630: Allow customizing regex flags when subclassing the
  string.Template class.

- Issue #9411: Allow specifying an encoding for config files in the
  configparser module.

- Issue #1682942: Improvements to configparser: support alternate
  delimiters, alternate comment prefixes and empty lines in values.

- Issue #9354: Provide getsockopt() in asyncore's file_wrapper.

- Issue #8966: ctypes: Remove implicit bytes-unicode conversion.

- Issue #9378: python -m pickle <pickle file> will now load and
  display the first object in the pickle file.

- Issue #4770: Restrict binascii module to accept only bytes (as specified).
  And fix the email package to encode to ASCII instead of
  ``raw-unicode-escape`` before ASCII-to-binary decoding.

- Issue #9384: python -m tkinter will now display a simple demo applet.

- The default size of the re module's compiled regular expression cache has
  been increased from 100 to 500 and the cache replacement policy has changed
  from simply clearing the entire cache on overflow to randomly forgetting 20%
  of the existing cached compiled regular expressions.  This is a performance